# pphpc

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  MyDeviceQuery.c  MyDeviceQuery.cpp  PS3Makefile  PredPrey.cpp  PredPrey.hpp  PredPreyCPU.c  PredPreyCPU.cpp  PredPreyCPU.h  PredPreyCPU.hpp  PredPreyCPU_Kernels.cl  PredPreyCommon.c  PredPreyCommon.cpp  PredPreyCommon.h  PredPreyCommon.hpp  PredPreyCommon_Kernels.cl  PredPreyGPU.c  PredPreyGPU.cpp  PredPreyGPU.h  PredPreyGPU.hpp  PredPreyGPUEvents.c  PredPreyGPUEvents.h  PredPreyGPUProfiler.c  PredPreyGPUProfiler.h  PredPreyGPUSort.c  PredPreyGPUSort.h  PredPreyGPU_Kernels.cl  PredPrey_Kernels.cl  Profiler.c  Profiler.h  README.md  Test.c  Wolf Sheep Predation.nlogo  bitstuff.c  build.sh  buildMyDeviceQueryAMD.sh  (+12 more)
clutils/: clerrors.c  compile.sh
cmake/Modules/: FindCf4ocl.cmake  FindClOps.cmake
configs/: config03.txt  config100.txt  config100v1.txt  config100v2.txt  config12800v1.txt  config12800v2.txt  config1600v1.txt  config1600v2.txt  config200v1.txt  config200v2.txt  config25v1.txt  config25v2.txt  config3200.txt  config3200v1.txt  config3200v2.txt  config400v1.txt  config400v2.txt  config50.txt  config50v1.txt  config50v2.txt  config6400v1.txt  config6400v2.txt  config800.txt  config800v1.txt  config800v2.txt
experiments/: BankConflictTest.c  BankConflictTest_kernels.cl  Makefile  Matmult  Matmult.c  MatmultT.c  MatmultT_kernels.cl  Matmult_kernels.cl
java/: LICENSE  README.md  build.xml  pp.bat  pp.sh  ppmt.bat  ppmt.sh  ppst.bat  ppst.sh
java/lib/: getlibs.sh
java/src/org/laseeb/pphpc/: AbstractAgent.java  AbstractEqualWorkFactory.java  AbstractModelEventObserver.java  AbstractMultiThreadWorkFactory.java  AbstractSimSynchronizer.java  AbstractSimThreadState.java  AbstractSimWorkProvider.java  AbstractSimWorkerState.java  AbstractSyncPoint.java  AbstractSynchronizer.java  AbstractThreadedWorkFactory.java  AbstractWork.java  AbstractWorkFactory.java  AbstractWorkProvider.java  AbstractWorkState.java  Agent.java  BasicSimSynchronizer.java  BigIntegerConverter.java  BlockingSimSynchronizer.java  BlockingSyncPoint.java  BlockingSynchronizer.java  Cell.java  CellFutureIsNowPostBehavior.java  CellFutureIsNowPostNop.java  CellFutureIsNowPostSort.java  CellGrassInitCoinRandCounter.java  CellGrassInitStrategy.java  CellMulti.java  CellPutAgentAsync.java  CellPutAgentBehavior.java  CellPutAgentStrategy.java  CellPutAgentSync.java  CellPutAgentSyncOrdered.java  CellPutAgentSyncSort.java  CellSingle.java  CompositeException.java  ControlEvent.java  Controller.java  DivideEqualSimGrid.java  EqualRowSyncWorkFactory.java  (+101 more)
java/src/org/laseeb/predpreymulti/: Agent.java  Cell.java  PredPreyMulti.java  Sheep.java  SimParams.java  Wolf.java
java/src/org/laseeb/predpreysimple/: Agent.java  Cell.java  PredPreySimple.java  Sheep.java  Wolf.java
lib/: getlibs.sh
libcl/: rng_lcg.cl  rng_mwc64x.cl
netlogo/: LICENSE.txt  README.md  pphpc.nlogo
ocl/: SdkMasterLog.csv  bitstuff.h  clerrors.h  clinfo.h  oclDeviceQuery.txt
opencl/: CMakeLists.txt  Doxyfile.in  README.md  VERSION
opencl/cmake/Modules/: Findcl_ops.cmake
opencl/configs/: config100.txt  config12800.txt  config1600.txt  config25.txt  config6400.txt
opencl/docs/: userguide.md
opencl/pp/: CMakeLists.txt  _g_err_macros.h  pp_common.c  pp_common.cl  pp_common.in.h  pp_cpu.c  pp_cpu.cl  pp_cpu.in.h  pp_gpu.c  pp_gpu.cl  pp_gpu.in.h  pp_gpu_legacy.c  pp_gpu_legacy.cl  pp_gpu_legacy.in.h
opencl/scripts/: energy.py  rng_plot.m
plot/: plotResult.m
pp/: CMakeLists.txt  Makefile  PredPreyCPU.c  PredPreyCPU.h  PredPreyCPU_Kernels.cl  PredPreyCommon.c  PredPreyCommon.h  PredPreyCommon_Kernels.cl  PredPreyGPU.c  PredPreyGPU.h  PredPreyGPUSort.c  PredPreyGPUSort.h  PredPreyGPUSort_Kernels.cl  PredPreyGPU_Kernels.cl  bitstuff.h  pp_common.c  pp_common.cl  pp_common.h  pp_common.in.h  pp_cpu.c  pp_cpu.cl  pp_cpu.h  pp_cpu.in.h  pp_gpu.c  pp_gpu.cl  pp_gpu.h  pp_gpu.in.h  pp_gpu_legacy.c  pp_gpu_legacy.cl  pp_gpu_legacy.h  pp_gpu_legacy.in.h  pp_gpu_sort.c  pp_gpu_sort.cl  pp_gpu_sort.h  pp_gpu_sort_oiabitonic.c  pp_gpu_sort_oiabitonic.h  pp_gpu_sort_sbitonic.c  pp_gpu_sort_sbitonic.h  rng_test.c  rng_test.cl  (+1 more)
pp/libcl/: rng.cl  rng_lcg.cl  rng_mwc64x.cl  rng_xorshift.cl  rng_xorshift1.cl  rng_xorshift128.cl  sort.cl  sort_oiabitonic.cl  sort_sbitonic.cl  workitem.cl
scripts/: intagent.py
src/: Makefile  pp_common.c  pp_common.cl  pp_common.h  pp_cpu.c  pp_gpu.c  pp_gpu.cl  pp_gpu.h  pp_gpu_legacy.c
src/org/laseeb/predpreymulti/: Sheep.java
src/org/laseeb/predpreysimple/: Cell.java  PredPreySimple.java  Wolf.java
tests/: test_profiler.c  test_utils.c
utils/: Makefile  MyDeviceQuery.c  PS3Makefile  Profiler.c  Profiler.h  bitstuff.c  bitstuff.h  clerrors.c  clerrors.h  clframework.c  clframework.h  clutils.c  clutils.h  compile.sh  fileutils.c  fileutils.h  kernelInfo.c  netlogo2stats.sh  plotstats.py
utils/tests/: test_profiler.c  test_utils.c
